--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,7 +7,7 @@ $white: $light-gray;
 $black: #000;
 
 $mobile-menu-toggler-size: 20px;
-$mobile-menu-height: calc(#{$mobile-menu-toggler-size} + 15.714px * 2);
+$mobile-menu-height: calc(#{$mobile-menu-toggler-size} + (15.714px + 10px) * 2);
 
 @mixin grid-reset {
   .ui.grid .row {
@@ -139,7 +139,6 @@ h2 {
 
 #mobile-menu-toggler {
   font-size: $mobile-menu-toggler-size;
-  // padding: 10px;
 
   span {
     padding: 10px;
@@ -147,6 +146,10 @@ h2 {
     color: $primary-color;
     background: $secondary-color;
     border-radius: 4px;
+
+    i {
+      margin-right: 0;
+    }
 
     @include border-radius-reset-on-less-690();
   }
